--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 
 spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username = postgres
-spring.datasource.password = postgres
+spring.datasource.password = 1234
 
 spring.jpa.hibernate.ddl-auto = create
 spring.datasource.initialization-mode=always
